--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -7,6 +7,8 @@
       %th Rating
       %th Release Date
       %th More Info
+      %th Edit
+      %th Delete
   %tbody
     - @movies.each do |movie|
       %tr
@@ -14,5 +16,8 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
+        -# 4.8 Modifications
+        %td= link_to 'Edit info', edit_movie_path(movie)
+        %td= link_to 'Delete', movie_path(movie), :method => :delete
         
 = link_to 'Add new movie', new_movie_path
