--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -16,3 +16,8 @@
 
 <!-- Section 4.5 (commented out after trying) -->
 <!-- = debug(@movie) -->
+
+<!-- Section 4.8 modification -->
+= link_to 'Edit Info', edit_movie_path(@movie)
+= link_to 'Delete', movie_path(@movie), :method => :delete
+
